@@ -3,6 +3,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
 2.1.9
   f - new queue attribute disallowed_types, currently recognized types:
       interactive and batch
+  e - refine "node note" feature with pbsnodes -N
+
 2.1.8
   b - stop possible memory corruption with an invalid request type (StockholmU)
   b - add node name to pbsnodes XML output (NCIFCRF)
